--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pizza.html">Pizza</a>
+        <ul>
+            <a href="./recipes/pizza.html">Pizza</a>
+            <a href="./recipes/waffles.html">Waffles</a>
+            <a href="./recipes/spaghetti.html">Spaghetti</a>
+        </ul>
+        
     </body>
 </html>
