Fix the unordered list of recipes in index.html
The li tag was missing from the unordered list of recipes. Added
the li tag so the list should render properly.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <a href="./recipes/pizza.html">Pizza</a>
-            <a href="./recipes/waffles.html">Waffles</a>
-            <a href="./recipes/spaghetti.html">Spaghetti</a>
+            <li><a href="./recipes/pizza.html">Pizza</a></li>
+            <li><a href="./recipes/waffles.html">Waffles</a></li>
+            <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
         </ul>
         
     </body>
